# feffit-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: macos.yml  rust.yml  windows-build.yml
crates/feffdat/: Cargo.toml
crates/feffdat/src/: constants.rs  gamma.rs  gnxas.rs  interp.rs  lib.rs  parser.rs  path.rs  sigma2.rs
crates/feffdat/tests/: gamma_parity.rs  gnxas_parity.rs  parity.rs  sigma2_parity.rs
crates/feffdat/tests/data/: ref_cu_default.txt  ref_cu_p2.txt  ref_cu_p3.txt  ref_cu_shift.txt
crates/feffinp/: Cargo.toml
crates/feffinp/src/: crystal.rs  lattice.rs  parse.rs  spacegroup.rs
crates/feffit/: Cargo.toml
crates/feffit/scripts/: ref_autobk.py  ref_autobk_chistd.py  ref_autobk_delta.py  ref_deconvolve.py  ref_diffkk.py  ref_e0.py  ref_lincombo.py  ref_mback.py  ref_pca.py  ref_preedge.py  ref_rebin.py
crates/feffit/src/: bkg.rs  dataset.rs  fit.rs  lib.rs  outputs.rs  textio.rs  transform.rs
crates/feffit/src/feffdat/: gnxas.rs  interp.rs  mass.rs  mod.rs  parser.rs  path.rs  sigma2.rs
crates/feffit/src/feffinp/: crystal.rs  element.rs  mod.rs  parse.rs  spacegroup.rs
crates/feffit/src/feffrun/: mod.rs
crates/feffit/src/lm/: lmdif.rs  mod.rs
crates/feffit/src/params/: parameters.rs
crates/feffit/src/xafsft/: mod.rs  transform.rs  window.rs
crates/feffit/src/xasdata/: batch.rs  clean.rs  group.rs  mod.rs  reader.rs  reduce.rs  xmu.rs
crates/feffit/src/xasproc/: autobk.rs  clean.rs  deconvolve.rs  diffkk.rs  e0.rs  lincombo.rs  mathutils.rs  mback.rs  pca.rs  preedge.rs  rebin.rs  xanes.rs
crates/feffit/tests/: bkg_parity.rs  feffdat_gamma_parity.rs  feffdat_gnxas_parity.rs  feffdat_parity.rs  feffdat_sigma2_parity.rs  feffrun_capstone.rs  feffrun_run.rs  fit_parity.rs  lm_parity.rs  params_parity.rs  parity.rs  xafsft_parity.rs  xasdata_reader_xmu.rs  xasdata_reduce.rs  xasproc_autobk_chistd_parity.rs  xasproc_autobk_delta_parity.rs  xasproc_autobk_parity.rs  xasproc_clean_parity.rs  xasproc_deconvolve_parity.rs  xasproc_diffkk_parity.rs  xasproc_e0_parity.rs  xasproc_groups2matrix_parity.rs  xasproc_lincombo_parity.rs  xasproc_mback_parity.rs  xasproc_pca_parity.rs  xasproc_preedge_parity.rs  xasproc_rebin_parity.rs  xasproc_xanes_parity.rs
crates/feffit/tests/common/: mod.rs
crates/feffit/tests/data/: ref_autobk_delta.txt  ref_clean.txt  ref_cu_default.txt  ref_cu_p2.txt  ref_deconvolve.txt  ref_diffkk.txt  ref_feffit_bkg.txt  ref_feffit_bounds.txt  ref_feffit_fit.txt  ref_feffit_k.txt  ref_feffit_multidataset.txt  ref_feffit_multikw.txt  ref_feffit_noise.txt  ref_feffit_outputs.txt  ref_feffit_q.txt  ref_feffit_r.txt  ref_feffit_sigma2.txt  ref_feffit_w.txt  ref_gamma.txt  ref_gnxas.txt  ref_groups2matrix.txt  ref_lincombo.txt  ref_params_expr.txt  ref_params_resolve.txt  ref_pca.txt  ref_preedge.txt  ref_rebin.txt  ref_sigma2.txt  ref_splev.txt  ref_xanes.txt  ref_xftf_kaiser.txt
crates/feffrun/: Cargo.toml
crates/feffrun/src/: lib.rs
crates/feffrun/tests/: run.rs
crates/lm/: Cargo.toml
crates/lm/src/: lib.rs
crates/lm/tests/: parity.rs
crates/lm/tests/data/: ref_lmdif.txt
crates/params/: Cargo.toml
crates/params/src/: expr.rs  lib.rs  parameters.rs
crates/params/tests/: parity.rs
crates/xafsft/: Cargo.toml
crates/xafsft/src/: bessel.rs  lib.rs  transform.rs  window.rs
crates/xafsft/tests/: parity.rs
crates/xafsft/tests/data/: ref_xftf_hanning.txt  ref_xftr_kaiser.txt
crates/xafsview/: Cargo.toml  build.rs
crates/xafsview/assets/feff8l/: .gitattributes
crates/xafsview/assets/fonts/: OFL.txt
crates/xafsview/src/: analysis_ui.rs  app.rs  atoms_ui.rs  batch_load.rs  calc_ui.rs  chi_io.rs  clean_ui.rs  feffit_batch.rs  feffit_ui.rs  fonts.rs  import.rs  main.rs  mback_ui.rs  plot.rs  plot_data.rs  plot_files.rs  reduce_ui.rs  timeres_ui.rs  wavelet.rs  widgets.rs  window.rs  xanes_ui.rs
crates/xasdata/: Cargo.toml
crates/xasdata/src/: batch.rs  clean.rs  group.rs  lib.rs  reader.rs  reduce.rs  xmu.rs
crates/xasdata/tests/: reader_xmu.rs  reduce.rs
crates/xasproc/: Cargo.toml
crates/xasproc/scripts/: ref_autobk.py  ref_autobk_chistd.py  ref_autobk_delta.py  ref_deconvolve.py  ref_diffkk.py  ref_e0.py  ref_lincombo.py  ref_mback.py  ref_pca.py  ref_preedge.py  ref_rebin.py
crates/xasproc/src/: autobk.rs  clean.rs  deconvolve.rs  diffkk.rs  e0.rs  lib.rs  lincombo.rs  mathutils.rs  mback.rs  pca.rs  preedge.rs  rebin.rs  special.rs  xanes.rs
crates/xasproc/tests/: autobk_chistd_parity.rs  autobk_delta_parity.rs  autobk_parity.rs  clean_parity.rs  deconvolve_parity.rs  diffkk_parity.rs  e0_parity.rs  groups2matrix_parity.rs  lincombo_parity.rs  mback_parity.rs  pca_parity.rs  preedge_parity.rs  rebin_parity.rs  xanes_parity.rs
crates/xasproc/tests/data/: ref_autobk.txt  ref_autobk_chistd.txt  ref_e0.txt  ref_mback.txt  ref_rebin.txt
doc/: TODO.md
scripts/: gen_atomic_mass.py  ref_chi.py  ref_clean.py  ref_feffit.py  ref_feffit_bkg.py  ref_feffit_bounds.py  ref_feffit_fit.py  ref_feffit_multidataset.py  ref_feffit_multikw.py  ref_feffit_outputs.py  ref_feffit_sigma2.py  ref_gamma.py  ref_gnxas.py  ref_groups2matrix.py  ref_lmdif.py  ref_params.py  ref_sigma2.py  ref_splev.py  ref_xanes.py  ref_xftf.py
