[workspace]
resolver = "3"
members = ["crates/feffdat", "crates/xafsft", "crates/feffit", "crates/params", "crates/lm", "crates/feffrun", "crates/xasproc"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.89"
repository = "https://github.com/pls-controls/feffit-rs"

[workspace.dependencies]
num-complex = "0.4"
rustfft = "6"
