[package]
name = "feffit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "EXAFS path-sum fitting (feffit) core — a pure-Rust port of larch.xafs.feffit"

[dependencies]
num-complex.workspace = true
feffdat = { path = "../feffdat" }
xafsft = { path = "../xafsft" }
