[package]
name = "feffit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "EXAFS path-sum fitting (feffit) core — a pure-Rust port of larch.xafs.feffit"

[dependencies]
num-complex.workspace = true
feffdat = { path = "../feffdat" }
xafsft = { path = "../xafsft" }
params = { path = "../params" }
lm = { path = "../lm" }

[dev-dependencies]
# End-to-end capstone test only: drive FEFF8L (subprocess) to generate the
# feffNNNN.dat that the fit consumes. feffrun does not depend on feffit, so this
# is acyclic.
feffrun = { path = "../feffrun" }
