[package]
name = "feffrun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Drive the FEFF8L path generator (subprocess) to turn a feff.inp into feffNNNN.dat files"

[features]
default = ["feff10"]
# In-process FEFF10 backend, ON by default. It pulls in the `feff10` crate from
# crates.io; its `feff10-sys` build script ships no Fortran source, so it
# downloads a prebuilt `libfeff10` static library from the matching GitHub
# release (verified by SHA256) and links it — needs network + curl at build
# time, not a Fortran compiler. Build with `--no-default-features` to drop it
# (e.g. offline) and use only the FEFF8L subprocess backend.
feff10 = ["dep:feff10"]

[dependencies]
# crates.io FEFF10 wrapper. Optional and inactive unless the `feff10` feature
# is enabled.
feff10 = { version = "0.2.2", optional = true }

[dev-dependencies]
feffdat = { path = "../feffdat" }
