[package]
name = "xafsft"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust port of xraylarch's xafsft: XAFS Fourier transforms (xftf/xftr) and FT windows."

[dependencies]
num-complex = { workspace = true }
rustfft = { workspace = true }
