[package]
name = "xafsview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Overrides the workspace MSRV (1.89): the GUI stack (siplot/egui/eframe/wgpu)
# requires 1.92. The library crates keep 1.89; only this binary needs the newer
# toolchain.
rust-version = "1.92"
description = "XAFSView — a modern Rust GUI for XAFS data reduction and FEFF fitting, built on feffit-rs + siplot"
default-run = "xafsview"

[[bin]]
name = "xafsview"
path = "src/main.rs"

[dependencies]
# Data session model (XasGroup / Session) — the lightweight data half of the app.
xasdata = { path = "../xasdata" }

# FEFFIT path-fitting engine and its inputs: the fit driver (feffit), the Feff
# path files (feffdat), and the global parameter/expression system (params).
feffit = { path = "../feffit" }
feffdat = { path = "../feffdat" }
params = { path = "../params" }

# Atoms/Feff tabs (P9): build & parse feff.inp (feffinp) and run FEFF to produce
# feffNNNN.dat (feffrun — its default in-process FEFF10 backend needs no external
# executables). The `spacegroup` feature pulls in pure-Rust space-group symmetry
# expansion (asymmetric unit + space group → full cell) for the Atoms tab.
feffinp = { path = "../feffinp", features = ["spacegroup"] }
feffrun = { path = "../feffrun" }

# GUI stack. Pinned to 0.34 to match siplot's egui/egui-wgpu pins; the wgpu
# renderer is required (Plot1D paints through an egui-wgpu callback).
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
siplot = "0.3"
# Native file/folder dialogs (Folders tab, Open/Save). Matches siplot's rfd pin.
rfd = "0.17"

# Morlet continuous wavelet transform of chi(k) (the EXAFS wavelet view). Pure
# Rust: the default backend is rustfft; the C FFTW backend is an opt-in feature
# we do not enable.
fcwt = "0.1.3"

# Atomic / X-ray data for the Phase-8 calculators (periodic table, atom data,
# ion-chamber/gas absorption, powder weight) and Chantler f2 for MBACK norm.
xraydb = { workspace = true }
