[package]
name = "xafsview"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Overrides the workspace MSRV (1.89): the GUI stack (siplot/egui/eframe/wgpu)
# requires 1.92. The library crates keep 1.89; only this binary needs the newer
# toolchain.
rust-version = "1.92"
description = "XAFSView — a modern Rust GUI for XAFS data reduction and FEFF fitting, built on feffit-rs + siplot"
default-run = "xafsview"

[[bin]]
name = "xafsview"
path = "src/main.rs"

[dependencies]
# The whole engine, now one crate: the data session model (xasdata), the Feff
# path files (feffdat), the global parameter/expression system (params), the
# FEFFIT fit driver, and the Atoms/Feff input + run support (feffinp/feffrun).
# `spacegroup` pulls in pure-Rust space-group symmetry expansion for the Atoms
# tab; the in-process FEFF10 backend (`feff10`) is on by feffit's default.
feffit = { path = "../feffit", version = "0.1.1", features = ["spacegroup"] }

# GUI stack. Pinned to 0.34 to match siplot's egui/egui-wgpu pins; the wgpu
# renderer is required (Plot1D paints through an egui-wgpu callback).
eframe = { version = "0.34", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.34"
siplot = "0.3"
# Native file/folder dialogs (Folders tab, Open/Save). Matches siplot's rfd pin.
rfd = "0.17"

# Morlet continuous wavelet transform of chi(k) (the EXAFS wavelet view). Pure
# Rust: the default backend is rustfft; the C FFTW backend is an opt-in feature
# we do not enable.
fcwt = "0.1.3"

# Atomic / X-ray data for the Phase-8 calculators (periodic table, atom data,
# ion-chamber/gas absorption, powder weight) and Chantler f2 for MBACK norm.
xraydb = { workspace = true }

# Run the per-group Feffit batch fits in parallel (each fit is independent).
rayon = { workspace = true }

# Embed assets/icon.ico into the .exe as its Windows Explorer/taskbar file icon
# (see build.rs). Gated to a Windows host: the resource compile needs the MSVC
# (or GNU) resource compiler, and only a Windows build emits a .exe to carry it,
# so non-Windows builds pull nothing and run no resource step.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
