[package]
name = "xasdata"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "XAS data session model: in-memory spectrum (XasGroup), session/folders, beamline file I/O and μ(E) building for the xafsview GUI"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# XAS reduction engines, orchestrated by the `reduce` module to fill an XasGroup.
xasproc = { path = "../xasproc" }
xafsft = { path = "../xafsft" }

[dev-dependencies]
