[package]
name = "xasproc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "XAS data reduction (pre_edge, autobk, rebin, deconvolve, …) — a pure-Rust port of larch.xafs preprocessing"

[dependencies]
feffdat = { path = "../feffdat" }
xafsft = { path = "../xafsft" }
lm = { path = "../lm" }
num-complex = "0.4"
rusty-fitpack = "0.1.2"
nalgebra = "0.35"
